--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube</artifactId>
 	<packaging>pom</packaging>
-	<version>5.0.1</version>
+	<version>5.0.2</version>
 
     <scm>
         <url>https://github.com/michaelcouck/ikube</url>
@@ -84,6 +84,7 @@
 		</resources>
 		<pluginManagement>
 			<plugins>
+                <!-- This plugin generated the find bugs reports. -->
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>findbugs-maven-plugin</artifactId>
@@ -96,21 +97,9 @@
 					<version>2.5</version>
 					<configuration>
                         <pushChanges>false</pushChanges>
-                        <username>michaelcouck</username>
-                        <password>Caherl1ne</password>
                         <remoteTagging>false</remoteTagging>
-                        <!--<providerImplementations>
-                            <git>jgit</git>
-                        </providerImplementations>-->
 						<workingDirectory>target/checkout</workingDirectory>
 					</configuration>
-                    <dependencies>
-                        <!--<dependency>
-                            <groupId>org.apache.maven.scm</groupId>
-                            <artifactId>maven-scm-provider-jgit</artifactId>
-                            <version>1.9</version>
-                        </dependency>-->
-                    </dependencies>
 				</plugin>
 				<!--
 				    This plugin's configuration is used to store Eclipse m2e settings only.
@@ -170,6 +159,7 @@
 					<encoding>${encoding}</encoding>
 				</configuration>
 			</plugin>
+            <!-- This plugin compiles the sources. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -198,6 +188,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
+            <!-- This plugin runs the integration tests. -->
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.6</version>
@@ -222,16 +213,19 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
 			</plugin>
+            <!-- Don't know what this plugin does. -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>truezip-maven-plugin</artifactId>
 				<version>1.0-beta-5</version>
 			</plugin>
+            <!-- This plugin generates the site documentation. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>2.1.1</version>
 			</plugin>
+            <!-- This plugin creates html from the documentation. -->
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
@@ -259,6 +253,7 @@
                     </attributes>
                 </configuration>
             </plugin>
+            <!-- Supposedly this plugin can generate graphs of the dependencies. -->
             <plugin>
                 <groupId>org.fusesource.mvnplugins</groupId>
                 <artifactId>maven-graph-plugin</artifactId>
