Documentation and cleanup.

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -1,4 +1,5 @@
 ikube-war=ikube.war
+site-war=site.war
 in-parallel=true
 
 project-directory=
@@ -62,3 +63,14 @@ tomcat-production-shutdown=${profile};cd ${tomcat-production-bin};${shutdown}
 tomcat-production-kill=pkill -9 -f '${tomcat-name-production}'
 tomcat-production-chmod=chmod 777 -R ${tomcat-production}
 tomcat-production-startup=${profile};cd ${tomcat-production-bin};${startup}
+
+server-site-ip=192.168.1.20
+
+tomcat-name-site=apache-tomcat-7.0.42
+tomcat-site=/home/${tomcat-name-site}
+tomcat-site-bin=${tomcat-site}/bin
+tomcat-site-webapps=${tomcat-site}/webapps
+tomcat-site-shutdown=${profile};cd ${tomcat-site-bin};${shutdown}
+tomcat-site-kill=pkill -9 -f '${tomcat-name-site}'
+tomcat-site-chmod=chmod 777 -R ${tomcat-site}
+tomcat-site-startup=${profile};cd ${tomcat-site-bin};${startup}
