--- a/code/site/src/main/webapp/WEB-INF/web.xml
+++ b/code/site/src/main/webapp/WEB-INF/web.xml
@@ -12,33 +12,33 @@
 
 	<display-name>Ikube site</display-name>
 
-	<listener>
+	<!--<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+	</listener>-->
 
-	<context-param>
+	<!--<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			/WEB-INF/spring.xml,
 			/WEB-INF/spring/spring-security.xml,
 			/WEB-INF/spring/spring-users.xml
 		</param-value>
-	</context-param>
+	</context-param>-->
 
-	<listener>
+	<!--<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-	</listener>
+	</listener>-->
 	
-	<filter>
+	<!--<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-	</filter>
-	<filter-mapping>
+	</filter>-->
+	<!--<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping>-->
 
-	<servlet>
+	<!--<servlet>
 		<servlet-name>springDispatcherServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
@@ -49,7 +49,7 @@
 	<servlet-mapping>
 		<servlet-name>springDispatcherServlet</servlet-name>
 		<url-pattern>*.html</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping>-->
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
