--- a/code/site/pom.xml
+++ b/code/site/pom.xml
@@ -149,7 +149,8 @@
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-jsp</artifactId>
 			<version>2.2.2</version>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 		
 		<dependency>
@@ -157,41 +158,47 @@
 			<artifactId>integration</artifactId>
 			<version>1.5.7</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.5.10</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.5.10</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springbyexample</groupId>
 			<artifactId>org.springbyexample.dynamic.tiles2</artifactId>
 			<version>1.2</version>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 			<exclusions>
 				<exclusion>
 					<artifactId>org.springframework.beans</artifactId>
@@ -239,31 +246,37 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
 			<version>${spring.version}</version>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring.version}</version>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
 			<version>${spring.version}</version>
+            <!--<scope>provided</scope>-->
+            <scope>provided</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework</groupId>
@@ -287,6 +300,7 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-acl</artifactId>
 			<version>${spring.version}</version>
+            <scope>provided</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework</groupId>
@@ -303,40 +317,47 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 			<version>${spring.version}</version>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${spring.version}</version>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 			<version>${spring.version}</version>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.spring-security-oauth</groupId>
 			<artifactId>spring-security-oauth</artifactId>
 			<version>${spring.security.oauth.version}</version>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-ldap</artifactId>
 			<version>${spring.version}</version>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
 			<version>${spring.version}</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 			<version>${spring.version}</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<!--<scope>compile</scope>-->
+            <scope>provided</scope>
 		</dependency>
 	</dependencies>
 	
