Fixing/breaking tests and refactoring.

--- a/code/libs/src/main/resources/environments/prd/spring.properties
+++ b/code/libs/src/main/resources/environments/prd/spring.properties
@@ -195,3 +195,6 @@ max-training=1000
 
 # How long the analyzer manager will wait before building the analyzers
 analyzer-manager-wait=60000
+
+documentation.services.version=1.0
+documentation.services.basePath=http://localhost:8080/ikube
