--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -201,3 +201,6 @@ max-training=10000
 
 # How long the analyzer manager will wait before building the analyzers
 analyzer-manager-wait=300000
+
+documentation.services.version=1.0
+documentation.services.basePath=http://localhost:8080/ikube
