--- a/code/war/src/main/webapp/WEB-INF/web.xml
+++ b/code/war/src/main/webapp/WEB-INF/web.xml
@@ -63,6 +63,10 @@
 			<param-name>com.sun.jersey.config.property.packages</param-name>
 			<param-value>ikube.web.service</param-value>
 		</init-param>
+        <!--<init-param>
+            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+            <param-value>true</param-value>
+        </init-param>-->
 		<load-on-startup>2</load-on-startup>
 	</servlet>
 	<servlet-mapping>
