--- a/pom.xml
+++ b/pom.xml
@@ -888,6 +888,7 @@
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>1.1.0.Final</version>
+            <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mozilla</groupId>
@@ -1028,27 +1029,32 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-jexl</artifactId>
 			<version>2.1.1</version>
+            <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
 			<version>3.2</version>
+            <scope>compile</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>nz.ac.waikato.cms.weka</groupId>
 			<artifactId>weka-stable</artifactId>
 			<version>3.6.9</version>
+            <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>squiggle</groupId>
 			<artifactId>squiggle</artifactId>
 			<version>1.4.0</version>
+            <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
 			<version>${spring-version}</version>
+            <scope>compile</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
@@ -1102,6 +1108,7 @@
             <groupId>com.sleepycat</groupId>
             <artifactId>je</artifactId>
             <version>4.0.92</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
@@ -1136,11 +1143,11 @@
             <version>1.2.0</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.2.2</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.encog</groupId>
             <artifactId>encog-core</artifactId>
@@ -1150,6 +1157,7 @@
             <groupId>org.tmatesoft.svnkit</groupId>
             <artifactId>svnkit</artifactId>
             <version>1.3.8</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -1162,7 +1170,8 @@
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-json</artifactId>
             <version>${jersey-version}</version>
-            <exclusions>
+            <scope>compile</scope>
+            <!--<exclusions>
                 <exclusion>
                     <artifactId>jettison</artifactId>
                     <groupId>org.codehaus.jettison</groupId>
@@ -1187,17 +1196,19 @@
                     <artifactId>stax-api</artifactId>
                     <groupId>javax.xml.stream</groupId>
                 </exclusion>
-            </exclusions>
+            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-core</artifactId>
             <version>${jersey-version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-servlet</artifactId>
             <version>${jersey-version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
@@ -1215,6 +1226,7 @@
             <groupId>com.sun.jersey.contribs</groupId>
             <artifactId>jersey-spring</artifactId>
             <version>${jersey-version}</version>
+            <scope>compile</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
