--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -194,6 +194,14 @@
             <version>1.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.enunciate</groupId>
+            <artifactId>enunciate-integration-jaxws-ri-rest-client</artifactId>
+            <version>1.28</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
