--- a/pom.xml
+++ b/pom.xml
@@ -1143,11 +1143,11 @@
             <version>1.2.0</version>
             <scope>compile</scope>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.2.2</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.encog</groupId>
             <artifactId>encog-core</artifactId>
