--- a/code/libs/src/main/resources/environments/prd/spring.properties
+++ b/code/libs/src/main/resources/environments/prd/spring.properties
@@ -178,7 +178,9 @@ hz-map-read-backup-data=true
 hz-map-eviction-policy=LFU
 hz-map-merge-policy=hz-ADD_NEW_ENTRY
 
-hz-async-backup-count=3
+hz-save-point-map=save-point
+
+hz-map-backup-count=5
 hz-max-idle-seconds=60
 hz-statistics-enabled=true
 hz-time-to-live-seconds=60
