--- a/code/libs/src/main/resources/environments/sys/spring.properties
+++ b/code/libs/src/main/resources/environments/sys/spring.properties
@@ -178,6 +178,8 @@ hz-map-read-backup-data=true
 hz-map-eviction-policy=LFU
 hz-map-merge-policy=hz-ADD_NEW_ENTRY
 
+hz-save-point-map=save-point
+
 hz-async-backup-count=3
 hz-max-idle-seconds=60
 hz-statistics-enabled=true
