--- a/code/libs/src/main/resources/environments/prd/spring.properties
+++ b/code/libs/src/main/resources/environments/prd/spring.properties
@@ -179,7 +179,9 @@ hz-map-merge-policy=hz-ADD_NEW_ENTRY
 
 hz-save-point-map=save-point
 
-hz-map-backup-count=5
+hz-map-backup-count=0
+hz-async-backup-count=5
+
 hz-max-idle-seconds=60
 hz-statistics-enabled=true
 hz-time-to-live-seconds=60
