--- a/code/tool/src/main/resources/log4j.properties
+++ b/code/tool/src/main/resources/log4j.properties
@@ -1,21 +1,21 @@
 # Root Logger
-log4j.rootLogger=INFO, console, file
-log4j.rootCategory=INFO, console
+log4j.rootLogger=WARN, console, file
+log4j.rootCategory=WARN, console
 
 # ikube application file logging
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.Threshold=DEBUG
+log4j.appender.file.Threshold=WARN
 log4j.appender.file.File=ikube/ikube.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
 log4j.appender.file.Append=false
 log4j.appender.file.ImmediateFlush=true
-log4j.appender.file.MaxFileSize=10MB
-log4j.appender.file.MaxBackupIndex=5
+log4j.appender.file.MaxFileSize=100MB
+log4j.appender.file.MaxBackupIndex=4
 
 # ikube application console logging
 log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.Threshold=DEBUG
+log4j.appender.console.Threshold=WARN
 log4j.appender.console.ImmediateFlush=true
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
@@ -23,20 +23,6 @@ log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%
 # set the categories
 log4j.category.net=WARN
 log4j.category.com=WARN
-log4j.category.com.atomikos.diagnostics=WARN
-# log4j.category.org=WARN
-log4j.category.org.springframework=WARN
-log4j.category.net.htmlparser=WARN
-# log4j.category.org.apache.catalina=FATAL
-log4j.category.com.ibm=WARN
-# log4j.category.org.apache=WARN
-
-log4j.category.org.apache.jcs=INFO
-log4j.category.org.apache.jcs.auxiliary.remote=DEBUG
-log4j.category.org.apache.jcs.auxiliary.lateral=DEBUG
-
-log4j.category.bitronix.tm.twopc=ERROR
+log4j.category.org=WARN
 
 log4j.category.ikube=INFO
-log4j.category.ikube.toolkit=INFO
-log4j.category.ikube.action.rule=INFO
