--- a/pom.xml
+++ b/pom.xml
@@ -1254,6 +1254,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft</groupId>
+            <artifactId>ews-java-api</artifactId>
+            <version>1.2.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<repositories>
