--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -592,6 +592,74 @@
                             <url>${artifactory}</url>
                         </configuration>
                     </execution>-->
+                    <!-- execution>
+                        <id>install-jwnl</id>
+                        <goals>
+                            <goal>deploy-file</goal>
+                        </goals>
+                        <phase>${phase}</phase>
+                        <configuration>
+                            <groupId>jwnl</groupId>
+                            <artifactId>jwnl</artifactId>
+                            <version>1.3.3</version>
+                            <file>tools/analytics/jwnl-1.3.3.jar</file>
+                            <packaging>${packaging}</packaging>
+                            <generatePom>${generate-pom}</generatePom>
+                            <repositoryId>${repository-id}</repositoryId>
+                            <url>${artifactory}</url>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-open-nlp-maxent</id>
+                        <goals>
+                            <goal>deploy-file</goal>
+                        </goals>
+                        <phase>${phase}</phase>
+                        <configuration>
+                            <groupId>opennlp</groupId>
+                            <artifactId>opennlp-maxent</artifactId>
+                            <version>3.0.3</version>
+                            <file>tools/analytics/opennlp-maxent-3.0.3.jar</file>
+                            <packaging>${packaging}</packaging>
+                            <generatePom>${generate-pom}</generatePom>
+                            <repositoryId>${repository-id}</repositoryId>
+                            <url>${artifactory}</url>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-open-nlp-tools</id>
+                        <goals>
+                            <goal>deploy-file</goal>
+                        </goals>
+                        <phase>${phase}</phase>
+                        <configuration>
+                            <groupId>opennlp</groupId>
+                            <artifactId>opennlp-tools</artifactId>
+                            <version>1.5.3</version>
+                            <file>tools/analytics/opennlp-tools-1.5.3.jar</file>
+                            <packaging>${packaging}</packaging>
+                            <generatePom>${generate-pom}</generatePom>
+                            <repositoryId>${repository-id}</repositoryId>
+                            <url>${artifactory}</url>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-open-nlp-uima</id>
+                        <goals>
+                            <goal>deploy-file</goal>
+                        </goals>
+                        <phase>${phase}</phase>
+                        <configuration>
+                            <groupId>opennlp</groupId>
+                            <artifactId>opennlp-uima</artifactId>
+                            <version>1.5.3</version>
+                            <file>tools/analytics/opennlp-uima-1.5.3.jar</file>
+                            <packaging>${packaging}</packaging>
+                            <generatePom>${generate-pom}</generatePom>
+                            <repositoryId>${repository-id}</repositoryId>
+                            <url>${artifactory}</url>
+                        </configuration>
+                    </execution -->
                 </executions>
             </plugin>
         </plugins>
