--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -608,15 +608,15 @@
                             <repositoryId>${repository-id}</repositoryId>
                             <url>${artifactory}</url>
                         </configuration>
-                    </execution>
-                    <execution>
+                    </execution -->
+                    <!--<execution>
                         <id>install-open-nlp-maxent</id>
                         <goals>
                             <goal>deploy-file</goal>
                         </goals>
                         <phase>${phase}</phase>
                         <configuration>
-                            <groupId>opennlp</groupId>
+                            <groupId>org.apache.opennlp</groupId>
                             <artifactId>opennlp-maxent</artifactId>
                             <version>3.0.3</version>
                             <file>tools/analytics/opennlp-maxent-3.0.3.jar</file>
@@ -633,7 +633,7 @@
                         </goals>
                         <phase>${phase}</phase>
                         <configuration>
-                            <groupId>opennlp</groupId>
+                            <groupId>org.apache.opennlp</groupId>
                             <artifactId>opennlp-tools</artifactId>
                             <version>1.5.3</version>
                             <file>tools/analytics/opennlp-tools-1.5.3.jar</file>
@@ -650,7 +650,7 @@
                         </goals>
                         <phase>${phase}</phase>
                         <configuration>
-                            <groupId>opennlp</groupId>
+                            <groupId>org.apache.opennlp</groupId>
                             <artifactId>opennlp-uima</artifactId>
                             <version>1.5.3</version>
                             <file>tools/analytics/opennlp-uima-1.5.3.jar</file>
@@ -659,7 +659,7 @@
                             <repositoryId>${repository-id}</repositoryId>
                             <url>${artifactory}</url>
                         </configuration>
-                    </execution -->
+                    </execution>-->
                 </executions>
             </plugin>
         </plugins>
