Correcting the Bosal models.

--- a/code/libs/src/main/resources/environments/sys/spring.properties
+++ b/code/libs/src/main/resources/environments/sys/spring.properties
@@ -55,8 +55,8 @@ language.word.lists.directory.index=./ikube/common/languages/index
 searcher.web.service.url=http://ikube.be/ikube/service/search/json
 
 # The start and end tier of the geohash
-max.geohash.levels=9
-max-geohash-levels-twitter=11
+max-geohash-levels=7
+max-geohash-levels-twitter=7
 
 ################################################
 ## These properties should generally not be modified by clients               ##
