--- a/pom.xml
+++ b/pom.xml
@@ -1282,6 +1282,12 @@
             <version>1.5.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>de.independantsoft</groupId>
+            <artifactId>jwebservices</artifactId>
+            <version>2.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<repositories>
