--- a/code/libs/src/main/resources/environments/sys/spring.properties
+++ b/code/libs/src/main/resources/environments/sys/spring.properties
@@ -8,16 +8,16 @@ max.age=6000
 # These parameters are destined for the index context
 buffer.size=256
 compound.file=true
-merge.factor=100
-buffered.docs=100
+merge.factor=1000
+buffered.docs=1000
 max.field.length=1000
 max.read.length=1000000
 index.root=/mnt/sdb
-index.directory.path=${index.root}/indexes
-index.directory.path.backup=${index.directory.path}
-jdbc.batch.size=1000
-internet.batch.size=10
-file.batch.size=10
+index.directory.path=${index.root}/indexes/primary
+index.directory.path.backup=${index.root}/indexes/backup
+jdbc.batch.size=10000
+internet.batch.size=100
+file.batch.size=100
 file.max.read.length=1000000
 throttle=0
 max.actions=1
