--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -74,3 +74,12 @@ tomcat-site-shutdown=${profile};cd ${tomcat-site-bin};${shutdown}
 tomcat-site-kill=pkill -9 -f '${tomcat-name-site}'
 tomcat-site-chmod=chmod 777 -R ${tomcat-site}
 tomcat-site-startup=${profile};cd ${tomcat-site-bin};${startup}
+
+tomcat-name-bosal=apache-tomcat-7.0.42
+tomcat-bosal=/home/${tomcat-name-bosal}
+tomcat-bosal-bin=${tomcat-bosal}/bin
+tomcat-bosal-webapps=${tomcat-bosal}/webapps
+tomcat-bosal-shutdown=${profile};cd ${tomcat-bosal-bin};${shutdown}
+tomcat-bosal-kill=pkill -9 -f '${tomcat-name-bosal}'
+tomcat-bosal-chmod=chmod 777 -R ${tomcat-bosal}
+tomcat-bosal-startup=${profile};cd ${tomcat-bosal-bin};${startup}
