--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -75,6 +75,10 @@ tomcat-site-kill=pkill -9 -f '${tomcat-name-site}'
 tomcat-site-chmod=chmod 777 -R ${tomcat-site}
 tomcat-site-startup=${profile};cd ${tomcat-site-bin};${startup}
 
+server-ip-bosal=127.0.0.1
+username-bosal=username
+password-bosal=password
+
 tomcat-name-bosal=apache-tomcat-7.0.42
 tomcat-bosal=/home/${tomcat-name-bosal}
 tomcat-bosal-bin=${tomcat-bosal}/bin
