--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>ikube</groupId>
         <artifactId>ikube</artifactId>
-        <version>5.0.2</version>
+        <version>${ikube-version}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
