Cleaning up a little.

--- a/pom.xml
+++ b/pom.xml
@@ -1321,6 +1321,12 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>-->
+        <dependency>
+            <groupId>org.neuroph</groupId>
+            <artifactId>neuroph-core</artifactId>
+            <version>2.9</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<repositories>
